--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Prefix
 set-option -g prefix C-t
-set-option -g default-terminal screen-256color
+set-option -g default-terminal xterm-256color
 
 #backgroud
 set -g status-fg white
